--- a/base/src/main/res/navigation/app_nav_graph.xml
+++ b/base/src/main/res/navigation/app_nav_graph.xml
@@ -21,7 +21,8 @@
         android:label="AuthFragmentView" >
         <action
             android:id="@+id/action_authFragmentView_to_mainFlowFragment"
-            app:destination="@id/mainFlowFragment" />
+            app:destination="@id/mainFlowFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/registerFragmentView"
