--- a/f_auth/src/main/res/layout/fragment_auth.xml
+++ b/f_auth/src/main/res/layout/fragment_auth.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@id/auth_btn_register"
+        app:layout_constraintBottom_toTopOf="@id/auth_btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/auth_til_email">
@@ -48,7 +48,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/auth_btn_register"
+        android:id="@+id/auth_btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
