--- a/f_main/src/main/res/layout/flow_fragment_main.xml
+++ b/f_main/src/main/res/layout/flow_fragment_main.xml
@@ -19,6 +19,7 @@
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_container_view"
         app:menu="@menu/bottom_bar_menu" />
