--- a/f_main/src/main/res/menu/bottom_bar_menu.xml
+++ b/f_main/src/main/res/menu/bottom_bar_menu.xml
@@ -2,11 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/feedFragmentView"
-        android:title="Feed" />
+        android:icon="@drawable/ic_bottom_menu_feed"
+        android:title="" />
     <item android:id="@+id/searchFragmentView"
-        android:title="Search"/>
+        android:icon="@drawable/ic_bottom_menu_search"
+        android:title=""/>
     <item android:id="@+id/chatsFragmentView"
-        android:title="Chats"/>
+        android:icon="@drawable/ic_bottom_menu_chat"
+        android:title=""/>
     <item android:id="@+id/profileFragmentView"
-        android:title="Profile"/>
+        android:icon="@drawable/ic_bottom_menu_profile"
+        android:title=""/>
 </menu>
