--- a/f_start/src/main/res/layout/fragment_main.xml
+++ b/f_start/src/main/res/layout/fragment_main.xml
@@ -10,9 +10,10 @@
         android:layout_height="0dp"
         android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toTopOf="@id/title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="stubContentDescription" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/main_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +26,7 @@
         app:layout_constraintVertical_bias="1"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/main_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_title" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/main_btn_sign_in"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
@@ -46,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/main_btn_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
