--- a/base/src/main/res/values/pallete_colors.xml
+++ b/base/src/main/res/values/pallete_colors.xml
@@ -4,7 +4,10 @@
     <!-- При использовании цветов с opacity (непрозрачностью) пользуйтесь этой таблицей
     https://bit.ly/32eftnA  -->
     <color name="red">#D45555</color>
+    <color name="red_alpha_10">#1AD45555</color>
     <color name="red_error">#870A0A</color>
+
+    <color name="milk">#F7F7F7</color>
 
     <color name="black_alpha_35">#59000000</color>
     <color name="black_alpha_24">#3D000000</color>
@@ -22,9 +25,10 @@
     <color name="gray_100">#E1E3E6</color>
     <color name="gray_050">#EBEDF0</color>
     <color name="gray_040">#F2F3F5</color>
-    <color name="white">#FFFFFF</color>
     <color name="white_90">#E6FFFFFF</color>
     <color name="white_80">#CCFFFFFF</color>
     <color name="white_50">#80FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+
     <color name="transparent">#00FFFFFF</color>
 </resources>
