--- a/f_start/src/main/res/layout/fragment_main.xml
+++ b/f_start/src/main/res/layout/fragment_main.xml
@@ -8,10 +8,11 @@
         android:id="@+id/main_banner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@id/title"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="stubContentDescription" />
+        android:contentDescription="@string/stub_content_description"
+        app:layout_constraintBottom_toTopOf="@id/main_title"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/main_title"
@@ -30,7 +31,7 @@
         android:id="@+id/main_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="110dp"
+        android:layout_marginBottom="65dp"
         android:gravity="center"
         android:text="@string/main_description_text"
         app:layout_constraintBottom_toTopOf="@+id/main_btn_sign_in"
@@ -51,7 +52,7 @@
         android:id="@+id/main_btn_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="30dp"
         android:text="@string/main_sign_up_btn_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
