--- a/base/src/main/res/values/button_styles.xml
+++ b/base/src/main/res/values/button_styles.xml
@@ -8,15 +8,15 @@
         <item name="android:paddingEnd">@dimen/default_padding</item>
     </style>
 
-<!--    <style name="Button.Main">
+    <style name="Button.Main">
         <item name="android:textColor">@color/selector_button_text_main</item>
         <item name="android:background">@drawable/selector_button_main</item>
     </style>
 
-    <style name="Button.Main.Medium">
+    <style name="Button.Main.Big">
         <item name="android:textSize">14sp</item>
-        <item name="android:minWidth">@dimen/medium_button_width</item>
-        <item name="android:minHeight">@dimen/medium_button_height</item>
+        <item name="android:minWidth">@dimen/big_button_width</item>
+        <item name="android:minHeight">@dimen/big_button_height</item>
     </style>
 
     <style name="Button.Main.Small">
@@ -26,10 +26,10 @@
     </style>
 
     <style name="Button.Borderless">
-        <item name="android:textColor">@color/selector_accent_color</item>
+        <item name="android:textColor">@color/steel_gray_400</item>
         <item name="android:background">@drawable/selector_button_borderless</item>
         <item name="android:paddingStart">20dp</item>
         <item name="android:paddingEnd">20dp</item>
-    </style>-->
+    </style>
 
 </resources>
