--- a/base/src/main/res/values/dimens.xml
+++ b/base/src/main/res/values/dimens.xml
@@ -2,7 +2,13 @@
 <resources>
 
     <dimen name="default_padding">16dp</dimen>
-    <dimen name="big_button_height">55dp</dimen>
+
     <dimen name="button_radius">12dp</dimen>
+
+    <dimen name="big_button_height">55dp</dimen>
+    <dimen name="big_button_width">185dp</dimen>
+
+    <dimen name="small_button_width">135dp</dimen>
+    <dimen name="small_button_height">40dp</dimen>
 
 </resources>
