--- a/base/src/main/res/values/button_styles.xml
+++ b/base/src/main/res/values/button_styles.xml
@@ -3,6 +3,7 @@
 
     <style name="Button" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:layout_width">match_parent</item>
+        <item name="android:textAppearance">@style/Base.14.Bold</item>
         <item name="android:layout_height">@dimen/big_button_height</item>
         <item name="android:paddingStart">@dimen/default_padding</item>
         <item name="android:paddingEnd">@dimen/default_padding</item>
@@ -26,8 +27,8 @@
     </style>
 
     <style name="Button.Borderless">
-        <item name="android:textColor">@color/steel_gray_400</item>
         <item name="android:background">@drawable/selector_button_borderless</item>
+        <item name="android:textAppearance">@style/Base.14.Regular.Steel_Gray_400</item>
         <item name="android:paddingStart">20dp</item>
         <item name="android:paddingEnd">20dp</item>
     </style>
