--- a/f_auth/src/main/res/layout/fragment_auth.xml
+++ b/f_auth/src/main/res/layout/fragment_auth.xml
@@ -49,7 +49,8 @@
 
     <Button
         android:id="@+id/auth_btn_login"
-        android:layout_width="match_parent"
+        style="@style/Button.Main.Big"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
