--- a/f_start/src/main/res/layout/fragment_main.xml
+++ b/f_start/src/main/res/layout/fragment_main.xml
@@ -9,16 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@id/title"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="stubContentDescription" />
+        android:contentDescription="stubContentDescription"
+        app:layout_constraintBottom_toTopOf="@id/main_title"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/main_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:text="@string/main_title_text"
+        android:textAppearance="@style/Base.20.Bold"
         app:layout_constraintBottom_toTopOf="@+id/main_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,20 +27,22 @@
         app:layout_constraintVertical_bias="1"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/main_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="110dp"
         android:gravity="center"
         android:text="@string/main_description_text"
+        android:textAppearance="@style/Base.14.Regular.Steel_Gray_400"
         app:layout_constraintBottom_toTopOf="@+id/main_btn_sign_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_title" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/main_btn_sign_in"
+        style="@style/Button.Main.Big"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="@string/main_sign_in_btn_text"
@@ -47,8 +50,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/main_btn_sign_up"
+        style="@style/Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
