--- a/base/src/main/res/values/pallete_colors.xml
+++ b/base/src/main/res/values/pallete_colors.xml
@@ -4,9 +4,10 @@
     <!-- При использовании цветов с opacity (непрозрачностью) пользуйтесь этой таблицей
     https://bit.ly/32eftnA  -->
     <color name="red">#D45555</color>
-    <color name="pale_red">#D17474</color>
+    <color name="red_alpha_10">#1AD45555</color>
     <color name="red_error">#870A0A</color>
 
+    <color name="milk">#F7F7F7</color>
     <color name="black_alpha_35">#59000000</color>
     <color name="black_alpha_24">#3D000000</color>
     <color name="black_alpha_24_noop">#C2C2C2</color>
