Вестка переведена на использование стилей

--- a/base/src/main/res/values/button_styles.xml
+++ b/base/src/main/res/values/button_styles.xml
@@ -15,21 +15,21 @@
 
     <style name="Button.Main.Big">
         <item name="android:textSize">14sp</item>
-        <item name="android:textAppearance">@style/Base.14.Regular.White</item>
         <item name="android:minWidth">@dimen/big_button_width</item>
         <item name="android:minHeight">@dimen/big_button_height</item>
     </style>
 
     <style name="Button.Main.Small">
         <item name="android:textSize">14sp</item>
-        <item name="android:textAppearance">@style/Base.14.Regular.White</item>
         <item name="android:minWidth">@dimen/small_button_width</item>
         <item name="android:minHeight">@dimen/small_button_height</item>
     </style>
 
     <style name="Button.Borderless">
+        <item name="android:textAppearance">@style/Base.14.Regular</item>
         <item name="android:background">@drawable/selector_button_borderless</item>
-        <item name="android:textAppearance">@style/Base.14.Regular.Steel_Gray_400</item>
+        <item name="android:minHeight">@dimen/small_button_height</item>
+        <item name="android:textColor">@color/steel_gray_400</item>
         <item name="android:paddingStart">20dp</item>
         <item name="android:paddingEnd">20dp</item>
     </style>
