--- a/f_start/src/main/res/layout/fragment_main.xml
+++ b/f_start/src/main/res/layout/fragment_main.xml
@@ -46,6 +46,7 @@
         style="@style/Button.Main.Big"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="@string/main_sign_in_btn_text"
         app:layout_constraintBottom_toTopOf="@+id/main_btn_sign_up"
         app:layout_constraintEnd_toEndOf="parent"
