--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="searchViewColor">#26C4C4C4</color>
     <color name="searchViewIconColor">#C4C4C4</color>
 
+    <color name="suggestionsTextLight">#9D9D9D</color>
 </resources>
