--- a/base/src/main/res/drawable/selector_button_borderless.xml
+++ b/base/src/main/res/drawable/selector_button_borderless.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/red_alpha_10">
+    android:color="@color/white_50">
     <item android:id="@android:id/mask">
         <inset>
             <shape android:shape="rectangle">
