--- a/base/src/main/res/layout/layout_toolbar.xml
+++ b/base/src/main/res/layout/layout_toolbar.xml
@@ -4,5 +4,6 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:layout_gravity="top"
     android:background="@color/white"
-    app:navigationIcon="@drawable/ic_back"/>
+    app:navigationIcon="@drawable/ic_back" />
