--- a/base/src/main/res/values/text_styles.xml
+++ b/base/src/main/res/values/text_styles.xml
@@ -95,6 +95,10 @@
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
 
+    <style name="Base.16.Regular.Steel_Gray_400">
+        <item name="android:textColor">@color/steel_gray_400</item>
+    </style>
+
     <style name="Base.16.Medium">
         <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
