--- a/f_book_detail/src/main/res/layout/fragment_book_detail.xml
+++ b/f_book_detail/src/main/res/layout/fragment_book_detail.xml
@@ -1,6 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/detail_toolbar"
+        layout="@layout/layout_toolbar" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="20dp"
+            android:paddingBottom="80dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/detail_book_card"
+                android:layout_width="220dp"
+                android:layout_height="340dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="20dp">
+
+                <ImageView
+                    android:id="@+id/detail_book_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/stub_content_description"
+                    android:scaleType="centerCrop"
+                    tools:src="@tools:sample/avatars" />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAppearance="@style/Base.18.Bold"
+                tools:text="Cather in the Rye" />
+
+            <TextView
+                android:id="@+id/item_book_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAppearance="@style/Base.16.Regular.Steel_Gray_400"
+                tools:text="J.D. Salinger" />
+
+            <!--TODO Добавить RatingBar-->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Об авторе"
+                android:textAppearance="@style/Base.18.Bold" />
+
+            <TextView
+                android:id="@+id/detail_about_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Base.16.Regular.Steel_Gray_400"
+                tools:text="J.D. Salinger was an American writer, best known for his
+                1951 novel The Catcher in the Rye. Before its publi cation, Salinger
+                 published several short stories in Story magazine" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Описание"
+                android:textAppearance="@style/Base.18.Bold" />
+
+            <TextView
+                android:id="@+id/detail_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Base.16.Regular.Steel_Gray_400"
+                tools:text="The Catcher in the Rye is a novel by J. D. Salinger,
+                partially published in serial form in 1945–1946 and as a novel
+                in 1951. It was originally intended for adu lts but is often read
+                by adolescents for its theme of angst, alienation and as a critique......" />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
+        android:paddingBottom="20dp">
+
+        <Button
+            android:id="@+id/detail_read_review"
+            style="@style/Button.Main.Big"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:text="Читать рецензию" />
+
+        <Button
+            android:id="@+id/detail_write_review"
+            style="@style/Button.Main.Big"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:text="Написать рецензию" />
+
+    </LinearLayout>
+
+</FrameLayout>
