--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -9,14 +9,14 @@
         android:label="FeedFragmentView" />
     <fragment
         android:id="@+id/searchFragmentView"
-        android:name="com.litreview.f_main.framents.SearchFragmentView"
+        android:name="com.litreview.f_search.SearchFragmentView"
         android:label="SearchFragmentView" />
     <fragment
         android:id="@+id/chatsFragmentView"
-        android:name="com.litreview.f_main.framents.ChatsFragmentView"
+        android:name="com.litreview.f_chats.ChatsFragmentView"
         android:label="ChatsFragmentView" />
     <fragment
         android:id="@+id/profileFragmentView"
-        android:name="com.litreview.f_main.framents.ProfileFragmentView"
+        android:name="com.litreview.f_profile.ProfileFragmentView"
         android:label="ProfileFragmentView" />
 </navigation>
