Верстка экрана профиля

--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="searchViewIconColor">#C4C4C4</color>
 
     <color name="suggestionsTextLight">#9D9D9D</color>
+
+    <color name="dividerViewColor">#EBEBEB</color>
 </resources>
