--- a/f_profile/src/main/res/layout/fragment_profile.xml
+++ b/f_profile/src/main/res/layout/fragment_profile.xml
@@ -76,8 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="horizontal"
+        android:background="@drawable/selector_button_borderless"
         android:paddingHorizontal="20dp"
         android:paddingVertical="10dp"
         app:layout_constraintTop_toBottomOf="@+id/divider">
@@ -87,17 +86,17 @@
             android:layout_height="30dp"
             android:contentDescription="@string/stub_content_description"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_my_reviews" />
+            android:src="@drawable/ic_my_reviews"
+            app:tint="@color/colorPrimary" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start||center_vertical"
+            android:layout_gravity="start|center_vertical"
             android:layout_marginStart="10dp"
             android:layout_weight="10"
             android:text="@string/profile_item_review"
-            android:textAppearance="@style/Base.14.Regular.Steel_Gray_400"
-            app:drawableStartCompat="@drawable/ic_my_reviews" />
+            android:textAppearance="@style/Base.14.Regular.Steel_Gray_400" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -107,12 +106,22 @@
             android:src="@drawable/ic_arrow" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/profile_cv_my_review"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_my_review"
+        app:layout_constraintTop_toTopOf="@+id/profile_my_review" />
+
     <LinearLayout
-        android:id="@+id/profile_"
+        android:id="@+id/profile_to_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="?attr/selectableItemBackground"
         android:orientation="horizontal"
         android:paddingHorizontal="20dp"
         android:paddingVertical="10dp"
@@ -123,17 +132,17 @@
             android:layout_height="30dp"
             android:contentDescription="@string/stub_content_description"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_bookmark_filled" />
+            android:src="@drawable/ic_bookmark_filled"
+            app:tint="@color/colorPrimary" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start||center_vertical"
+            android:layout_gravity="start|center_vertical"
             android:layout_marginStart="10dp"
             android:layout_weight="10"
-            android:text="@string/profile_item_review"
-            android:textAppearance="@style/Base.14.Regular.Steel_Gray_400"
-            app:drawableStartCompat="@drawable/ic_my_reviews" />
+            android:text="@string/profile_item_to_reed"
+            android:textAppearance="@style/Base.14.Regular.Steel_Gray_400" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -142,6 +151,15 @@
             android:contentDescription="@string/stub_content_description"
             android:src="@drawable/ic_arrow" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/profile_cv_review"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="?attr/selectableItemBackground"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_to_review"
+        app:layout_constraintTop_toTopOf="@+id/profile_to_review" />
 
     <Button
         style="@style/Button.Main.Big"
