Добавлено валидация полей по нажатию на кнопку

--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/authFragmentView"
-        android:name="com.litreview.f_auth.AuthFragmentView"
+        android:name="com.litreview.f_auth.auth.AuthFragmentView"
         android:label="AuthFragmentView">
         <action
             android:id="@+id/action_authFragmentView_to_mainFlowFragment"
