--- a/f_auth/src/main/res/layout/fragment_auth.xml
+++ b/f_auth/src/main/res/layout/fragment_auth.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="70dp"
+        app:errorIconDrawable="@null"
         app:layout_constraintBottom_toTopOf="@+id/auth_til_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
+        app:errorIconDrawable="@null"
         app:layout_constraintBottom_toTopOf="@id/auth_btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
