--- a/base/src/main/res/layout/main_activity.xml
+++ b/base/src/main/res/layout/main_activity.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container_view"
@@ -15,4 +14,4 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/app_nav_graph" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
