--- a/f_auth/src/main/res/layout/fragment_register.xml
+++ b/f_auth/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -28,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="70dp">
+                android:layout_marginTop="50dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/register_tiet_name"
@@ -87,7 +86,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/register_til_password_confirmation"
+                android:id="@+id/register_til_phone"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,10 +94,10 @@
                 android:layout_marginTop="26dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/register_tiet_password_confirmation"
+                    android:id="@+id/register_tiet_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/register_pass_text_confirmation_hint" />
+                    android:hint="@string/register_phone_hint" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
