--- a/f_auth/src/main/res/layout/fragment_auth.xml
+++ b/f_auth/src/main/res/layout/fragment_auth.xml
@@ -26,7 +26,8 @@
             android:id="@+id/auth_tiet_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/auth_email_hint" />
+            android:hint="@string/auth_email_hint"
+            android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
