--- a/f_auth/src/main/res/layout/fragment_register.xml
+++ b/f_auth/src/main/res/layout/fragment_register.xml
@@ -87,7 +87,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/register_pass_hint"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    app:passwordToggleEnabled="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
