--- a/base/src/main/res/values/string.xml
+++ b/base/src/main/res/values/string.xml
@@ -3,6 +3,7 @@
 
     <!--region Common-->
     <string name="stub_content_description">stubContentDescription</string>
+    <string name="pattern_name">%s %s</string>
     <!--endregion-->
 
     <!--region Validation error message-->
