--- a/f_profile/src/main/res/layout/fragment_profile.xml
+++ b/f_profile/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
         android:layout_margin="20dp"
         app:cardCornerRadius="35dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/profile_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar">
 
         <ImageView
             android:id="@+id/profile_avatar"
@@ -61,7 +61,7 @@
         android:padding="5dp"
         android:src="@drawable/ic_settings"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />
 
     <View
         android:id="@+id/divider"
@@ -75,10 +75,10 @@
         android:id="@+id/profile_my_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/selector_button_borderless"
         android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
-        android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@+id/divider">
 
         <ImageView
@@ -152,7 +152,7 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/profile_cv_review"
+        android:id="@+id/profile_cv_my_books"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="?attr/selectableItemBackground"
@@ -163,9 +163,11 @@
         app:layout_constraintTop_toTopOf="@+id/profile_to_review" />
 
     <Button
+        android:id="@+id/profile_btn_logout"
         style="@style/Button.Main.Big"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="20dp"
         android:text="@string/profile_btn_logout"
         app:layout_constraintBottom_toBottomOf="parent"
